--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "react-native-generic-table-page",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "A customisable page containing a searchable table of data from realm for react native",
   "repository": "https://github.com/sussol/react-native-generic-table-page.git",
   "author": "Sustainable Solutions (NZ) Ltd.",
   "license": "MIT",
   "main": "index.js",
+  "dependencies": {
+    "react-native-ui-components": "^0.1.1",
+    "react-native-data-table": "^0.1.0"
+  },
   "devDependencies": {
     "babel-core": "^6.17.0",
     "babel-eslint": "^6.1.2",
