--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "deep-equal": "^1.0.1",
     "react-native-data-table": "^0.2.0",
+    "react-native-keyboard-aware-scroll-view": "^0.8.0",
     "react-native-ui-components": "^0.5.0"
   },
   "devDependencies": {
